// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DumbTimeline component should match an active TimelineSegment 1`] = `
<div
  className="minimized-timeline active"
  onMouseOver={[Function]}
>
  <div
    className="timeline-title txt-active-light"
    onClick={[Function]}
  >
    <div
      className="timeline-link"
    >
      Bar
    </div>
  </div>
  <div
    className="timeline-graph"
  >
    <div
      className="timeline-bars"
    >
      <div
        className="timeline-bar-filler"
        style={
          Object {
            "width": "20%",
          }
        }
      >
         
      </div>
      <div
        className="timeline-bar-background-container"
      >
         
        <div
          className="timeline-bar-background"
        />
      </div>
    </div>
  </div>
  <span
    className="timeline-arrow"
  />
</div>
`;

exports[`DumbTimeline component should match the TimelineSegment 1`] = `
<div
  className="minimized-timeline"
  onMouseOver={[Function]}
>
  <div
    className="timeline-title txt-active-light"
    onClick={[Function]}
  >
    <div
      className="timeline-link"
    >
      Bar
    </div>
  </div>
  <div
    className="timeline-graph"
  >
    <div
      className="timeline-bars"
    >
      <div
        className="timeline-bar-filler"
        style={
          Object {
            "width": "20%",
          }
        }
      >
         
      </div>
      <div
        className="timeline-bar-background-container"
      >
         
        <div
          className="timeline-bar-background"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DumbTimeline component should match the TimelineSegment 2`] = `
<div
  className="minimized-timeline"
  onMouseOver={[Function]}
>
  <div
    className="timeline-title txt-active-light"
    onClick={[Function]}
  >
    <span
      className="arrow assembl-icon assembl-icon-right-dir"
    />
    <div
      className="timeline-link"
    >
      Bar
    </div>
  </div>
  <div
    className="timeline-graph"
  >
    <div
      className="timeline-bars"
    >
      <div
        className="timeline-bar-filler"
        style={
          Object {
            "width": "20%",
          }
        }
      >
         
      </div>
      <div
        className="timeline-bar-background-container"
      >
         
        <div
          className="timeline-bar-background"
        />
      </div>
    </div>
  </div>
</div>
`;
